try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -83,7 +83,7 @@
   
   @keyframes amanox {
     from {
-      margin-left: 100%;
+      margin-left: 50%;
       width: 10%;
     }
   
